# R-Type

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md
StreetFighter/: CMakeLists.txt
StreetFighter/config/: Background.json  Ken.json  firstCinematic.json
StreetFighter/include/: Game.hpp  Gui.hpp  StreetFighter.hpp
StreetFighter/src/: Game.cpp  Gui.cpp  Main.cpp  StreetFighter.cpp
client/: CMakeLists.txt
client/include/: AEntity.hpp  Game.hpp  GameClient.hpp  Gui.hpp  IEntity.hpp  LobbyMenu.hpp  Menu.hpp  Network.hpp  Packet.hpp  Player.hpp  RegistryWrapper.hpp  TCPCommunication.hpp  TextureManager.hpp
client/src/: AEntity.cpp  Game.cpp  GameClient.cpp  Gui.cpp  LobbyMenu.cpp  Main.cpp  Menu.cpp  Network.cpp  Packet.cpp  RegistryWrapper.cpp  TCPCommunication.cpp  TextureManager.cpp  main.cpp
cmake/: FindAsio.cmake  (+6 more)
ecs/: CMakeLists.txt  lib.cpp
ecs/components/: CMakeLists.txt
ecs/components/Animation/: CMakeLists.txt
ecs/components/Animation/src/: lib.cpp
ecs/components/Animation3D/: CMakeLists.txt
ecs/components/Animation3D/src/: lib.cpp
ecs/components/Attributes/: CMakeLists.txt
ecs/components/Attributes/src/: lib.cpp
ecs/components/Cinematic/: CMakeLists.txt
ecs/components/Cinematic/src/: lib.cpp
ecs/components/Color/: CMakeLists.txt
ecs/components/Color/src/: lib.cpp
ecs/components/Controllable/: CMakeLists.txt
ecs/components/Controllable/src/: lib.cpp
ecs/components/Destroyable/: CMakeLists.txt
ecs/components/Destroyable/src/: lib.cpp
ecs/components/Drawable/: CMakeLists.txt
ecs/components/Drawable/src/: lib.cpp
ecs/components/FilledColor/: CMakeLists.txt
ecs/components/FilledColor/src/: lib.cpp
ecs/components/Gravitable/: CMakeLists.txt
ecs/components/Gravitable/src/: lib.cpp
ecs/components/Hover/: CMakeLists.txt
ecs/components/Hover/src/: lib.cpp
ecs/components/Invincibility/: CMakeLists.txt
ecs/components/Invincibility/src/: lib.cpp
ecs/components/KeyPressed/: CMakeLists.txt
ecs/components/KeyPressed/src/: lib.cpp
ecs/components/Life/: CMakeLists.txt
ecs/components/Life/src/: lib.cpp
ecs/components/Model/: CMakeLists.txt
ecs/components/Model/src/: lib.cpp
ecs/components/Music/: CMakeLists.txt
ecs/components/OutlinedColor/: CMakeLists.txt
ecs/components/OutlinedColor/src/: lib.cpp
ecs/components/Parallax/: CMakeLists.txt
ecs/components/Parallax/src/: lib.cpp
ecs/components/Planes/: CMakeLists.txt
ecs/components/Planes/src/: lib.cpp
ecs/components/Position/: CMakeLists.txt
ecs/components/Position/src/: Position.cpp  lib.cpp
ecs/components/Position3D/: CMakeLists.txt
ecs/components/Position3D/src/: lib.cpp
ecs/components/RectangleShape/: CMakeLists.txt
ecs/components/RectangleShape/src/: lib.cpp
ecs/components/Rotate/: CMakeLists.txt
ecs/components/Rotate/src/: lib.cpp
ecs/components/Score/: CMakeLists.txt
ecs/components/Score/src/: lib.cpp
ecs/components/Shield/: CMakeLists.txt
ecs/components/Shield/src/: lib.cpp
ecs/components/Size/: CMakeLists.txt
ecs/components/Size/src/: lib.cpp
ecs/components/SoundEffect/: CMakeLists.txt
ecs/components/SoundEffect/src/: lib.cpp
ecs/components/Sprite/: CMakeLists.txt
ecs/components/Sprite/src/: lib.cpp
ecs/components/Text/: CMakeLists.txt
ecs/components/Velocity/: CMakeLists.txt
ecs/include/: Clock.hpp  ComponentFactory.hpp  ComponentLoader.hpp  Context.hpp  Defs.hpp  DlLoader.hpp  Entity.hpp  EntityManager.hpp  IContext.hpp  INetwork.hpp  IPacket.hpp  IPlugin.hpp  ImageResolver.hpp  Packet.hpp  PluginManager.hpp  Registery.hpp  Registry.hpp  SparseArray.hpp  SystemsManager.hpp  TextureManager.hpp  Utils.hpp  ZipperIterator.hpp
ecs/include/Components/: Animations.hpp  Animations3D.hpp  Attributes.hpp  Cinematic.hpp  Clicked.hpp  Color.hpp  Controllable.hpp  Destroyable.hpp  Drawable.hpp  FilledColor.hpp  FilledColorComponent.hpp  Gravitable.hpp  Hover.hpp  IComponent.hpp  Image.hpp  Invincibility.hpp  KeyPressed.hpp  Life.hpp  Model.hpp  Music.hpp  OutlinedColor.hpp  Parallax.hpp  Planes.hpp  Position.hpp  Position3D.hpp  Pralax.hpp  RectangleShape.hpp  Rotate.hpp  Score.hpp  Shield.hpp  Size.hpp  SoundEffect.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Velocity.hpp
ecs/include/Systems/: Animation3DSystem.hpp  BasicMouvementSystem.hpp  BasicRandomEnnemiesSystem.hpp  BossSystems.hpp  CinematicsSystem.hpp  ColisionThirdDimension.hpp  CollisionsSystem.hpp  DestroySystem.hpp  EnnemiesMilepatesSystem.hpp  EnnemiesMilespatesSystem.hpp  GravitableMouvementSystem.hpp  GravitableThirdDSystem.hpp  GunFireSystem.hpp  ISystems.hpp  InvincibilitySystem.hpp  KickSystem.hpp  ParallaxSystem.hpp  PlayerMouvementSystem.hpp  PunchSystem.hpp  SitDownSystem.hpp  ThirdDMouvementSystem.hpp  basicRandomEnnemiesSystem.hpp
ecs/src/: ComponentFactory.cpp  Context.cpp  ImageResolver.cpp  Packet.cpp  Registry.cpp  SystemsManager.cpp  Utils.cpp
ecs/src/Systems/: BossSystems.cpp
ecs/src/systems/: BasicMouvementSystem.cpp  BasicRandomEnnemiesSystem.cpp  BossSystems.cpp  CinematicsSystem.cpp  ColisionThirdDimension.cpp  CollisionsSystem.cpp  DestroySystem.cpp  EnnemiesMilepatesSystem.cpp  GravitableMouvementSystem.cpp  GravitableThirdDSystem.cpp  GunFireSystem.cpp  InvincibilitySystem.cpp  KickSystem.cpp  ParallaxSystem.cpp  PunchSystem.cpp  SitDownSystem.cpp  ThirdDMouvementSystem.cpp
ecs/test/: EntityManagerTest.cpp  EntityTest.cpp  ImageResolverTest.cpp  RegistryTest.cpp  SparseArrayTest.cpp  ZipperIteratorTest.cpp
poc_raylib/: CMakeLists.txt
poc_raylib/assets/Animation/: HipHopDance.fbx  Jump.glb
poc_raylib/config/: finishPlatform.json  fivePlatform.json  fourthPlatform.json  plane.json  platform.json  player.json  secondPlatform.json  thirdPlatform.json
poc_raylib/include/: Poc.hpp
poc_raylib/src/: Main.cpp  Poc.cpp
server/: CMakeLists.txt
server/include/: Client.hpp  Context.hpp  Game.hpp  Lobby.hpp  Network.hpp  Packet.hpp  Server.hpp  TCPConnection.hpp
server/src/: Client.cpp  Context.cpp  Game.cpp  Lobby.cpp  Main.cpp  Network.cpp  Packet.cpp  Server.cpp  TCPConnection.cpp  main.cpp
(+44 files in other folders)
