cmake_minimum_required(VERSION 3.27)

add_subdirectory(Position)
add_subdirectory(Sprite)
add_subdirectory(Controllable)
add_subdirectory(Destroyable)
add_subdirectory(Animation)
add_subdirectory(FilledColor)
add_subdirectory(OutlinedColor)
add_subdirectory(Drawable)
add_subdirectory(Score)
add_subdirectory(Shield)
add_subdirectory(SoundEffect)
add_subdirectory(Life)
add_subdirectory(Parallax)
add_subdirectory(Size)
add_subdirectory(Velocity)
add_subdirectory(Text)
